<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/calcOuterConstraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".ui.fragment.UnitCalcFragment">

    <ScrollView
        android:id="@+id/calcScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calcNestedConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/charImg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/questionmark_placeholder"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@+id/charNameTv"
                app:layout_constraintTop_toBottomOf="@id/charNameTv"
                app:layout_constraintWidth_percent="0.5" />

            <TextView
                android:id="@+id/charNameTv"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="18dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/atkTypeSpinner"
                android:layout_width="0dp"
                style="@style/InputField"
                android:layout_marginEnd="18dp"
                app:layout_constraintEnd_toStartOf="@+id/charImg"
                app:layout_constraintStart_toStartOf="@+id/charNameTv"
                app:layout_constraintTop_toTopOf="@id/charImg" />

            <CheckBox
                android:id="@+id/BreakpointCb"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:gravity="fill_vertical"
                android:layoutDirection="rtl"
                android:text="@string/Breakpoint"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/atkTypeSpinner"
                app:layout_constraintStart_toStartOf="@id/atkTypeSpinner"
                app:layout_constraintTop_toBottomOf="@id/atkTypeSpinner" />

            <CheckBox
                android:id="@+id/CriticalCb"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:gravity="fill_vertical"
                android:layoutDirection="rtl"
                android:text="@string/Critical"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/BreakpointCb"
                app:layout_constraintStart_toStartOf="@id/BreakpointCb"
                app:layout_constraintTop_toBottomOf="@id/BreakpointCb" />

            <TextView
                android:id="@+id/ColorTv"
                android:layout_width="42dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:gravity="fill_vertical"
                android:text="@string/Color"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/CriticalCb"
                app:layout_constraintTop_toBottomOf="@id/CriticalCb" />

            <Spinner
                android:id="@+id/ColorTypeSpinner"
                android:layout_width="0dp"
                style="@style/InputField"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="18dp"
                app:layout_constraintBottom_toBottomOf="@+id/ColorTv"
                app:layout_constraintEnd_toStartOf="@id/charImg"
                app:layout_constraintStart_toEndOf="@id/ColorTv"
                app:layout_constraintTop_toTopOf="@+id/ColorTv" />

            <TextView
                android:id="@+id/GwBonusTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="fill_vertical"
                android:text="@string/GwBonus"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/charImg"
                app:layout_constraintEnd_toEndOf="@+id/ColorTv"
                app:layout_constraintStart_toStartOf="@id/ColorTv"
                app:layout_constraintTop_toBottomOf="@id/ColorTv" />

            <Spinner
                android:id="@+id/GwBonusTypeSpinner"
                android:layout_width="0dp"
                style="@style/InputField"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="18dp"
                app:layout_constraintBottom_toBottomOf="@id/GwBonusTv"
                app:layout_constraintEnd_toStartOf="@id/charImg"
                app:layout_constraintStart_toEndOf="@id/GwBonusTv"
                app:layout_constraintTop_toTopOf="@+id/GwBonusTv" />

            <Button
                android:id="@+id/calcButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light"
                android:gravity="fill_vertical"
                android:text="Calculate!"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/GwBonusTv"
                app:layout_constraintTop_toBottomOf="@+id/charImg" />

            <TextView
                android:id="@+id/ExpectedDamageTv"
                android:layout_width="140dp"
                android:layout_height="36dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:gravity="fill_vertical"
                android:text="@string/ExpectedDamage"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/calcButton"
                app:layout_constraintTop_toBottomOf="@+id/charImg" />

            <TextView
                android:id="@+id/ResultDamageValueTv"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:gravity="fill_vertical|end"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ExpectedDamageTv"
                app:layout_constraintEnd_toEndOf="@+id/charImg"
                app:layout_constraintStart_toEndOf="@id/ExpectedDamageTv"
                app:layout_constraintTop_toTopOf="@id/ExpectedDamageTv" />


            <!--    MAIN STATS LAYER    -->


            <EditText
                android:id="@+id/atkStatEdit"
                style="@style/InputField"
                android:layout_width="130dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="@id/atkTypeSpinner"
                app:layout_constraintTop_toBottomOf="@+id/ResultDamageValueTv" />

            <TextView
                android:id="@+id/atkStatTitleTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/PhysicalAtkStat"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/atkStatEdit"
                app:layout_constraintEnd_toEndOf="@id/atkStatEdit"
                app:layout_constraintStart_toStartOf="@id/atkStatEdit"
                app:layout_constraintTop_toBottomOf="@+id/ResultDamageValueTv" />

            <EditText
                android:id="@+id/atkLvlEdit"
                android:layout_width="64dp"
                android:layout_marginEnd="12dp"
                style="@style/InputField"
                app:layout_constraintBottom_toBottomOf="@id/atkStatEdit"
                app:layout_constraintEnd_toStartOf="@id/passive1Edit"
                app:layout_constraintTop_toTopOf="@id/atkStatEdit" />

            <TextView
                android:id="@+id/atkLvlTitleTv"
                style="@style/InputTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/SkillLvl"
                app:layout_constraintBottom_toTopOf="@id/atkLvlEdit"
                app:layout_constraintEnd_toEndOf="@id/atkLvlEdit"
                app:layout_constraintStart_toStartOf="@id/atkLvlEdit"
                app:layout_constraintTop_toBottomOf="@+id/ResultDamageValueTv" />

            <EditText
                android:id="@+id/passive1Edit"
                android:layout_width="64dp"
                android:layout_marginEnd="12dp"
                style="@style/InputField"
                app:layout_constraintBottom_toBottomOf="@id/atkStatEdit"
                app:layout_constraintEnd_toStartOf="@id/passive2Edit"
                app:layout_constraintTop_toTopOf="@id/atkStatEdit" />

            <TextView
                android:id="@+id/passive1TitleTv"
                style="@style/InputTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Passive1Lvl"
                app:layout_constraintBottom_toTopOf="@id/passive1Edit"
                app:layout_constraintEnd_toEndOf="@id/passive1Edit"
                app:layout_constraintStart_toStartOf="@id/passive1Edit"
                app:layout_constraintTop_toBottomOf="@+id/ResultDamageValueTv" />

            <EditText
                android:id="@+id/passive2Edit"
                android:layout_width="64dp"
                style="@style/InputField"
                app:layout_constraintBottom_toBottomOf="@id/atkStatEdit"
                app:layout_constraintEnd_toEndOf="@id/charNameTv"
                app:layout_constraintTop_toTopOf="@id/atkStatEdit" />

            <!--   ATK BUFF LAYER    -->

            <TextView
                android:id="@+id/passive2TitleTv"
                style="@style/InputTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Passive2Lvl"
                app:layout_constraintBottom_toTopOf="@id/passive2Edit"
                app:layout_constraintEnd_toEndOf="@id/passive2Edit"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/passive2Edit"
                app:layout_constraintTop_toBottomOf="@+id/ResultDamageValueTv"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/atkTypeBuffTv"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="32dp"
                android:gravity="fill_vertical"
                android:text="@string/MentalAtkUp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/atkTypePercentEdit"
                app:layout_constraintStart_toStartOf="@id/atkStatEdit"
                app:layout_constraintTop_toBottomOf="@id/atkStatEdit" />

            <EditText
                android:id="@+id/atkTypePercentEdit"
                style="@style/InputField"
                android:layout_width="150dp"
                app:layout_constraintBottom_toBottomOf="@+id/atkTypeBuffTv"
                app:layout_constraintEnd_toStartOf="@+id/AtkTypePercentTitleTv"
                app:layout_constraintStart_toEndOf="@+id/atkTypeSpinner"
                app:layout_constraintTop_toTopOf="@id/atkTypeBuffTv" />


            <TextView
                android:id="@+id/AtkTypePercentTitleTv"
                style="@style/InputTitle"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:text="@string/percent"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/atkTypePercentEdit"
                app:layout_constraintEnd_toEndOf="@+id/charNameTv"
                app:layout_constraintTop_toTopOf="@+id/atkTypePercentEdit" />

            <!--   CRIT DMG LAYER   -->

            <TextView
                android:id="@+id/critDmgBuffEdit"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="32dp"
                android:gravity="fill_vertical"
                android:text="@string/CritDmgUp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/critAtkPercentEdit"
                app:layout_constraintStart_toStartOf="@id/atkStatEdit"
                app:layout_constraintTop_toBottomOf="@id/atkTypeBuffTv" />


            <EditText
                android:id="@+id/critAtkPercentEdit"
                style="@style/InputField"
                android:layout_width="150dp"
                app:layout_constraintBottom_toBottomOf="@+id/critDmgBuffEdit"
                app:layout_constraintEnd_toStartOf="@+id/critAtkPercentTitleTv"
                app:layout_constraintStart_toEndOf="@+id/atkTypeSpinner"
                app:layout_constraintTop_toTopOf="@id/critDmgBuffEdit" />

            <TextView
                android:id="@+id/critAtkPercentTitleTv"
                style="@style/InputTitle"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:text="@string/percent"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/critAtkPercentEdit"
                app:layout_constraintEnd_toEndOf="@+id/charNameTv"
                app:layout_constraintTop_toTopOf="@+id/critAtkPercentEdit" />

            <!--   DEF DOWN LAYER   -->

            <TextView
                android:id="@+id/DefenceDebuffTv"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="32dp"
                android:gravity="fill_vertical"
                android:text="@string/PhysicalDefDown"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/defDebuffPercentEdit"
                app:layout_constraintStart_toStartOf="@id/atkStatEdit"
                app:layout_constraintTop_toBottomOf="@id/critDmgBuffEdit" />

            <EditText
                android:id="@+id/defDebuffPercentEdit"
                style="@style/InputField"
                android:layout_width="150dp"
                app:layout_constraintBottom_toBottomOf="@+id/DefenceDebuffTv"
                app:layout_constraintEnd_toStartOf="@+id/defDebuffPercentTitleTv"
                app:layout_constraintStart_toEndOf="@+id/atkTypeSpinner"
                app:layout_constraintTop_toTopOf="@id/DefenceDebuffTv" />

            <TextView
                android:id="@+id/defDebuffPercentTitleTv"
                style="@style/InputTitle"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:text="@string/percent"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/defDebuffPercentEdit"
                app:layout_constraintEnd_toEndOf="@+id/charNameTv"
                app:layout_constraintTop_toTopOf="@+id/defDebuffPercentEdit" />



            <!--  COLOR RESISTANCE DOWN LAYER   -->

            <TextView
                android:id="@+id/ColorDebuffTv"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:gravity="fill_vertical"
                android:text="@string/PurpleResDown"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/colorDebuffPercentEdit"
                app:layout_constraintStart_toStartOf="@id/atkStatEdit"
                app:layout_constraintTop_toBottomOf="@id/DefenceDebuffTv" />

            <EditText
                android:id="@+id/colorDebuffPercentEdit"
                style="@style/InputField"
                android:layout_width="150dp"
                app:layout_constraintBottom_toBottomOf="@+id/ColorDebuffTv"
                app:layout_constraintEnd_toStartOf="@+id/colorDebuffPercentTitleTv"
                app:layout_constraintStart_toEndOf="@+id/atkTypeSpinner"
                app:layout_constraintTop_toTopOf="@id/ColorDebuffTv" />

            <TextView
                android:id="@+id/colorDebuffPercentTitleTv"
                style="@style/InputTitle"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:text="@string/percent"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/colorDebuffPercentEdit"
                app:layout_constraintEnd_toEndOf="@+id/charNameTv"
                app:layout_constraintTop_toTopOf="@+id/colorDebuffPercentEdit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>